# wgpu-rgb8-demo

./: Cargo.toml  LICENSE  README.md  build.rs
shaders/: shader.vert  shader.vert.spv
src/: lib.rs  main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
