[package]
name = "wgpu-rgb8-demo"
version = "0.1.0"
authors = ["Alessandro Re <ale@ale-re.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
winit = "0.22.1"
log = "0.4"
futures = "0.3"
env_logger = "0.7"
