[package]
name = "wgpu-rgb8-demo"
version = "0.1.0"
authors = ["Alessandro Re <ale@ale-re.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
futures = "0.3"
log = "0.4"
thiserror = "1.0.16"
wgpu = "0.5.0"
winit = "0.22.1"
